--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
     <header>
         <a href="">Home</a>
         <a href="">Tech stack</a>
+        <a href="">EDUCATION</a>
+        <a href="">Project</a>
+        <a href="">HOBBIES</a>
+        <a href="">Personal</a>
+        <a href="">Others</a>
     </header>
 </body>
 </html>
