--- a/index.html
+++ b/index.html
@@ -7,13 +7,26 @@
 </head>
 <body>
     <header>
-        <a href="">Home</a>
-        <a href="">Tech stack</a>
-        <a href="">EDUCATION</a>
-        <a href="">Project</a>
-        <a href="">HOBBIES</a>
-        <a href="">Personal</a>
-        <a href="">Others</a>
+        <span> Name: Anup Bayaskar &nbsp;&nbsp;&nbsp;&nbsp; Mobile: 7387 63 7383 &nbsp;&nbsp;&nbsp;&nbsp; Email: abc@gmail.com</span>
     </header>
+    <hr>
+<!-- Navigation Section -->
+    <nav>
+        <a href="home.html" target="mainFrame">HOME</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="techStack.html" target="mainFrame">TECH STACK</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="project.html" target="mainFrame">PROJECT</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="education.html" target="mainFrame">EDUCATION</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;
+        <a href="others.html" target="mainFrame">OTHERS</a>
+    </nav>
+    <hr>
+    <iframe src="home.html" name="mainFrame" frameborder="0" width="900px" height="450px">
+
+    </iframe>
+    <!-- Footer Section -->
+    <footer>
+        <a href="">Linked IN</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="">GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="">Naukri</a>
+    </footer>
 </body>
 </html>
