--- a/index.html
+++ b/index.html
@@ -4,10 +4,17 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
+    
 </head>
+<style> 
+header{
+    color:rgba(8, 199, 247, 0.973);
+    background-color: rgba(59, 100, 100, 0.975);
+}
+</style>
 <body>
     <header>
-        <span> Name: Anup Bayaskar &nbsp;&nbsp;&nbsp;&nbsp; Mobile: 7387 63 7383 &nbsp;&nbsp;&nbsp;&nbsp; Email: abc@gmail.com</span>
+        <span> Name: Anup Bayaskar &nbsp;&nbsp;&nbsp;&nbsp;  Mobile: 7387 63 7383 &nbsp;&nbsp;&nbsp;&nbsp; Email: abc@gmail.com</span>
     </header>
     <hr>
 <!-- Navigation Section -->
@@ -19,14 +26,14 @@
         <a href="others.html" target="mainFrame">OTHERS</a>
     </nav>
     <hr>
-    <iframe src="home.html" name="mainFrame" frameborder="0" width="900px" height="450px">
+    <iframe src="home.html" name="mainFrame" frameborder="1" width="900px" height="450px">
 
     </iframe>
     <!-- Footer Section -->
     <footer>
-        <a href="">Linked IN</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="">Naukri</a>
+        <a href="https://www.linkedin.com/in/anup-bayaskar-b0a133278/">Linked IN</a> &nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://github.com/AnupBayaskar">GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;
+        <a href="https://www.naukri.com/mnjuser/profile">Naukri</a>
     </footer>
 </body>
 </html>
