--- a/home.html
+++ b/home.html
@@ -4,19 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    
+    <style>
+        .heading{
+            font-weight: bolder;
+            color: rgb(55, 114, 83);
+            background-color: rgb(201, 237, 201);
+        }
+        .angular{
+            color: rgb(49, 3, 249);
+        }
+        #list1{
+            color: rgb(90, 50, 78);
+            background-color: rgb(242, 211, 233);
+        }
+    </style>
 </head>
 <body>
-    <h1>Professional Summery</h1>
-    <ul>
+    <h1 class="heading">Career Objectives</h1>
+    <p>to work in organization where i can learn and grow my skills and help organizational growth</p>
+    <h1 class="heading">Professional Summary</h1>
+    <ul id="list1">
         <li>
-            Having 5 years of experience in developing Single page Web Applications using Angular 13, HTML5, CSS3, Bootstrap 5, JavaScript, ES6, TypeScript
+            Having 5 years of experience in developing Single page Web Applications using <span class="angular">Angular 8,</span> HTML5, CSS3, Bootstrap 5, JavaScript, ES6, TypeScript
         </li>
         <li>Experience on working with version control system - GIT and GitHub
         </li>
         <li>Experience working with JIRA for user stories and bug tracking</li>
         <li>Strong Debugging & Troubleshooting code experience using Chrome Developer Tool</li>
         <li>Working exposure on ID's like VS Code and Notepad++</li>
-        <li> Good working experience under Agile methodologies environment</li>
+        <li>Good working experience under Agile methodologies environment</li>
         <li>Experience in using Chrome Developer Tool for debugging and troubleshooting the code</li>
         <li>Knowledge of NodeJS</li>
         <li>Knowledge of API and Database</li>
