--- a/project.html
+++ b/project.html
@@ -5,11 +5,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+<style>
+    .team strong{
+        padding-right: 50px;
+    }
+    ul li {
+            list-style: none;
+        }
+        li h2::before{ 
+        content: "👉🏻";
+        }
+</style>
 <body>
     <h1><strong>Project Details</strong></h1><hr>
     <h2><strong> Name :- <u>Student Management</u></strong></h2><br>
     <h2><strong><u>Environment :- </u></strong><mark>Anguler 8, TypeScript (ES6), HTML5, CSS, Bootstrap, Github, Desktop Github, Agile and JIRA, IDE-VS Code</mark></h2><br>
-    <h2><strong>Team Size :- 06</strong> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<strong>Duration :- <i>2021-1 <sup>st</sup>-juy till <u>present</u></i></strong></h2>
+    <h2 class="team"><strong>Team Size :- 06</strong><strong>Duration :- <i>2021-1 <sup>st</sup>-juy till <u>present</u></i></strong></h2>
     <h2><strong>Project Discription :- </strong>This project is mainly used for student management in colleges, where it help to managestuent record like <br>student registration, student update in information and to see all his or her academic activities like score card, attendance.</h2><hr>
     <h1><Strong>Roles and Responsibilities :- </Strong></h1>
    <ul>
