--- a/index.html
+++ b/index.html
@@ -1,39 +1,78 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>index</title>
-    
-</head>
-<style> 
-header{
-    color:rgba(8, 199, 247, 0.973);
-    background-color: rgba(59, 100, 100, 0.975);
+  </head><link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" integrity="sha512-DTOQO9RWCH3ppGqcWaEA1BIZOC6xxalwEsw9c2QQeAIftl+Vegovlnee1c9QX4TctnWMn13TZye+giMm8e2LwA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+  <style>
+    header {
+      height: 25px;
+      color: rgba(8, 199, 247, 0.973);
+      background-color: rgba(59, 100, 100, 0.975);
+    }
+    header p span{
+        margin : 20px;
+    }
+    header p {
+      text-align: end;
+    }
+    nav a {
+      margin: 30px;
+      text-decoration: none;
+    }
+    .box{
+     box-shadow: 08px 5px 10px rgb(86, 151, 89);;
+    }
+    footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-</style>
-<body>
+footer a {
+  margin:20px;
+  text-decoration: none;
+}
+    body{
+      background-image: url(/assest//Perfect-White-Gradient-4K-Wallpaper-7314.jpg);
+      background-size:cover;
+      width: 100%;
+  height: 100%;
+    }
+  </style>
+  <body>
     <header>
-        <span> Name: Anup Bayaskar &nbsp;&nbsp;&nbsp;&nbsp;  Mobile: 7387 63 7383 &nbsp;&nbsp;&nbsp;&nbsp; Email: abc@gmail.com</span>
-    </header>
-    <hr>
-<!-- Navigation Section -->
-    <nav>
-        <a href="home.html" target="mainFrame">HOME</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="techStack.html" target="mainFrame">TECH STACK</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="project.html" target="mainFrame">PROJECT</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="education.html" target="mainFrame">EDUCATION</a> &nbsp;&nbsp; &nbsp; &nbsp; &nbsp;
-        <a href="others.html" target="mainFrame">OTHERS</a>
-    </nav>
-    <hr>
-    <iframe src="home.html" name="mainFrame" frameborder="1" width="900px" height="450px">
 
-    </iframe>
+      <p>
+        <span> Name: Anup Bayaskar </span><span>Mobile: 7387 63 7383</span
+        ><span> Email: abc@gmail.com</span>
+      </p>
+    </header>
+    <hr />
+    <!-- Navigation Section -->
+    <nav>
+      <a href="home.html" target="mainFrame">HOME</a>
+      <a href="techStack.html" target="mainFrame">TECH STACK</a>
+      <a href="project.html" target="mainFrame">PROJECT</a>
+      <a href="education.html" target="mainFrame">EDUCATION</a>
+      <a href="others.html" target="mainFrame">OTHERS</a>
+    </nav>
+    <hr />
+    <iframe
+      src="home.html"
+      name="mainFrame"
+      frameborder="1"
+      width="900px"
+      height="450px" class="box"
+    >
+    </iframe> <br>
     <!-- Footer Section -->
     <footer>
-        <a href="https://www.linkedin.com/in/anup-bayaskar-b0a133278/">Linked IN</a> &nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://github.com/AnupBayaskar">GitHub</a>&nbsp;&nbsp;&nbsp;&nbsp;
-        <a href="https://www.naukri.com/mnjuser/profile">Naukri</a>
+      <a href="https://www.linkedin.com/in/anup-bayaskar-b0a133278/"
+        ><i class="fa-brands fa-linkedin fa-bounce fa-xl" style="color: #131313;"></i></a
+      >
+      <a href="https://github.com/AnupBayaskar"><i class="fa-brands fa-square-github fa-bounce fa-xl" style="color: #131313;"></i></a>
+      <a href="https://www.naukri.com/mnjuser/profile"><i class="fa-solid fa-suitcase fa-bounce fa-xl" style="color: #131313;"></i></a>
     </footer>
-</body>
+  </body>
 </html>
