--- a/techStack.html
+++ b/techStack.html
@@ -9,6 +9,16 @@
            border: 1px solid rgb(7, 7, 7);
            border-collapse: collapse;
        }
+       table{
+        box-shadow:  14px 22px 13px 5px rgba(10, 10, 10, 0.2);;
+        background-color:rgb(170, 164, 164);
+       }
+       tr:hover{
+    background-color:rgb(248, 249, 249) ;
+       }
+       td:hover{
+        color: rgb(247, 5, 53);
+       }
    </style>
 </head>
 <body>
